# ClawPowers-Agent

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  DEMO.md  KNOWN_LIMITATIONS.md  LICENSE  LICENSING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  clawpowers-agent-1.1.0.tgz  eslint.config.mjs  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demos/: demo-memory-cycle.ts  demo-rsi-cycle.ts  demo-task-execution.ts
native/: Cargo.toml
native/crates/canonical/: Cargo.toml
native/crates/canonical/src/: lib.rs
native/crates/security/: Cargo.toml
native/crates/verification/: Cargo.toml
native/crates/x402/: Cargo.toml
native/ffi/src/: lib.rs
native/wasm/pkg/: clawpowers_wasm.d.ts  clawpowers_wasm.js  clawpowers_wasm_bg.wasm.d.ts
native/wasm/pkg-node/: clawpowers_wasm.d.ts  clawpowers_wasm.js  clawpowers_wasm_bg.wasm
native/wasm/src/: lib.rs
profiles/: dev.json  full.json  growth.json  lead.json  secure.json
scripts/: ci-smoke-openclaw.mjs  sync-skills.mjs
src/: agent-constants.ts  agent-types.ts  agent.ts  cli.ts  constants.ts  gateway.ts  index.ts  openclaw-plugin.ts  openclaw-runtime.ts  plugin.ts  skills.ts  types.ts
src/agent/: completion.ts  executor.ts  index.ts  intake.ts  planner.ts  reviewer.ts
src/itp/: delegation-hook.ts
src/memory/: index.ts  native-store.ts
src/native/: index.ts
src/payments/: index.ts  native-bridge.ts
src/rsi/: index.ts
src/swarm/: index.ts  memory.ts  model_router.ts
tests/: agent.test.ts  cli.test.ts  config.test.ts  skills.test.ts  types.test.ts
tests/agent/: completion.test.ts  executor.test.ts  intake.test.ts  planner.test.ts  reviewer.test.ts
tests/integration/: control-loop.test.ts
tests/native/: native-bridge.test.ts
