[package]
name = "clawpowers-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clawpowers-canonical = { path = "../canonical" }

[dev-dependencies]
rusqlite = { workspace = true }
