[package]
name = "clawpowers-x402"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
clawpowers-fee = { path = "../fee" }
clawpowers-tokens = { path = "../tokens" }

[dev-dependencies]
tokio = { workspace = true }
